--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-container {
+  width: calc(100vw - 60px);
+  height: calc(100vh - 60px);
+  padding: 30px;
+  display: grid;
+  grid-template-rows: min-content auto min-content;
+  gap: 30px;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  margin: 0;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0;
+}
+
+footer p {
+  margin: 5px;
+}
+
+footer .copyright {
+  font-size: 10px;
+}
+
+.calculator-container {
+  display: flex;
+  justify-content: center;
+}
+
+.calculator {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+.calculator th,
+.calculator td {
+  border: 1px solid black;
+  padding: 3px 13px;
+}
+
+.calculator-row:hover {
+  background-color: lightgray;
+  cursor: pointer;
+}
+
+.calculator-edit-row input[type="number"] {
+  max-width: 60px;
 }
