--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  background-color: #dae0e4;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .main-container {
-  width: calc(100vw - 60px);
+  /* width: calc(100vw - 60px); */
   height: calc(100vh - 60px);
   padding: 30px;
   display: grid;
@@ -43,6 +44,7 @@ footer .copyright {
 .calculator-container {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .calculator {
@@ -59,6 +61,10 @@ footer .copyright {
 .calculator-row:hover {
   background-color: lightgray;
   cursor: pointer;
+}
+
+.calculator-row .assignment {
+  min-width: 600px;
 }
 
 .calculator-edit-row input[type="number"] {
