--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@ header {
   justify-content: center;
 }
 
-h1 {
+h1, h2, h3, p {
   margin: 0;
 }
 
@@ -42,9 +42,12 @@ footer .copyright {
 }
 
 .calculator-container {
+  width: 100%;
+  height: 90%;
+  align-self: center;
   display: flex;
   justify-content: center;
-  width: 100%;
+  align-items: center;
 }
 
 .calculator {
